--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -75,7 +75,7 @@ dockers:
       goarch: amd64
       image_templates:
         - "sikalabs/redirect-server:{{ .Tag }}"
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.goreleaser
       ids:
         - redirect-server
       build_flag_templates:
@@ -94,7 +94,7 @@ dockers:
       goarch: arm64
       image_templates:
         - "sikalabs/redirect-server:{{ .Tag }}-arm64v8"
-      dockerfile: Dockerfile.arm64v8
+      dockerfile: Dockerfile.goreleaser.arm64v8
       ids:
         - redirect-server
       build_flag_templates:
