--- a/Dockerfile.goreleaser.arm64v8
+++ b/Dockerfile.goreleaser.arm64v8
@@ -1,2 +1,3 @@
 FROM arm64v8/debian:12-slim
+LABEL org.opencontainers.image.source https://github.com/sikalabs/redirect-server
 COPY redirect-server /usr/local/bin/
